Added redux, and user form to connect with database

--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -1,23 +1,23 @@
 {
 	"development": {
-		"username": "<username>",
-		"password": "<password>",
-		"database": "<database>",
-		"host": "<host>",
+		"username": "b40dddb559a263",
+		"password": "2dcfcf50",
+		"database": "heroku_8dfb10ad8364d25",
+		"host": "eu-cdbr-west-01.cleardb.com",
 		"dialect": "mysql"
 	},
 	"test": {
-		"username": "<username>",
-		"password": "<password>",
-		"database": "<database>",
-		"host": "<host>",
+		"username": "b40dddb559a263",
+		"password": "2dcfcf50",
+		"database": "heroku_8dfb10ad8364d25",
+		"host": "eu-cdbr-west-01.cleardb.com",
 		"dialect": "mysql"
 	},
 	"production": {
-		"username": "<username>",
-		"password": "<password>",
-		"database": "<database>",
-		"host": "<host>",
+		"username": "b40dddb559a263",
+		"password": "2dcfcf50",
+		"database": "heroku_8dfb10ad8364d25",
+		"host": "eu-cdbr-west-01.cleardb.com",
 		"dialect": "mysql"
 	}
 }
