Changed heroku scripts for deployment

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"scripts": {
 		"web": "cd frontend && npm i && npm run build && npm start",
-		"server": "cd backend && npm i && npm start",
-		"deploy": "cp -a frontend/build/. public/",
-		"buildncopy": "cd frontend && npm i && npm run build && (cp -r build ../backend/)",
+		"server": "cd server && npm i && npm start",
+		"deploy": "cp -a client/build/. public/",
+		"buildncopy": "cd client && npm i && npm run build && (cp -r build ../server/)",
 		"heroku-postbuild": "npm run buildncopy"
 	}
 }
