--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "root",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"npm": ">=7.24.0",
+		"node": ">=16.10.0"
+	},
 	"scripts": {
 		"web": "cd frontend && npm i && npm run build && npm start",
 		"server": "cd server && npm i && npm start",
