--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
-		"npm": ">=7.24.0",
-		"node": ">=16.10.0"
+		"npm": "7.24.0",
+		"node": "16.10.0"
 	},
 	"scripts": {
 		"web": "cd frontend && npm i && npm run build && npm start",
