--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "React App",
-	"name": "Create React App Sample",
+	"short_name": "Fullstack Template",
+	"name": "Create a React Fullstack App",
 	"icons": [
 		{
 			"src": "favicon.ico",
